data/textbook_ingest/puheping_math_contest_v2/ch3/3.1/MANIFEST.md
# Section 3.1 worked examples MANIFEST

Total: 26
Starred: 1 (例25*)
Source: merged MD §3.1 → ## 习题3.1; OCR PDF pages 132–145 for meta.page
L3: {'math.calc.int.sub': 6, 'math.calc.int.special': 10, 'math.calc.int.parts': 9, 'math.calc.int.indef': 1}

| id | example_id | page | l3_id | difficulty | starred |
|---|---|---|---|---|---|
| tx-pu-math-contest-v2-ch3-3.1-ex-01 | 例1 | 133 | math.calc.int.sub | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-02 | 例2 | 133 | math.calc.int.sub | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-03 | 例3 | 134 | math.calc.int.sub | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-04 | 例4 | 134 | math.calc.int.sub | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-05 | 例5 | 134 | math.calc.int.special | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-06 | 例6 | 135 | math.calc.int.sub | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-07 | 例7 | 135 | math.calc.int.special | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-08 | 例8 | 136 | math.calc.int.parts | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-09 | 例9 | 137 | math.calc.int.parts | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-10 | 例10 | 137 | math.calc.int.parts | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-11 | 例11 | 137 | math.calc.int.parts | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-12 | 例12 | 137 | math.calc.int.parts | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-13 | 例13 | 138 | math.calc.int.parts | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-14 | 例14 | 139 | math.calc.int.parts | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-15 | 例15 | 139 | math.calc.int.parts | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-16 | 例16 | 140 | math.calc.int.parts | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-17 | 例17 | 140 | math.calc.int.indef | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-18 | 例18 | 141 | math.calc.int.special | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-19 | 例19 | 141 | math.calc.int.special | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-20 | 例20 | 142 | math.calc.int.special | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-21 | 例21 | 142 | math.calc.int.special | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-22 | 例22 | 143 | math.calc.int.special | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-23 | 例23 | 144 | math.calc.int.special | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-24 | 例24 | 144 | math.calc.int.special | hit |  |
| tx-pu-math-contest-v2-ch3-3.1-ex-25 | 例25* | 145 | math.calc.int.special | hit | * |
| tx-pu-math-contest-v2-ch3-3.1-ex-26 | 例26 | 145 | math.calc.int.sub | hit |  |
