data/textbook_ingest/puheping_math_contest_v2/ch3/3.2/MANIFEST.md
# Section 3.2 worked examples MANIFEST

Total: 75
Starred: 16 (例11*, 例21*, 例29*, 例30*, 例37*, 例38*, 例39*, 例42*, 例44*, 例45*, 例51*, 例64*, 例66*, 例71*, 例72*, 例75*)
Source: merged MD §3.2 → ## 习题3.2; OCR PDF pages 147–194 for meta.page
L2: {'变限积分与积分应用': 21, '一元积分学（计算）': 54}
L3: {'math.calc.varlim.eq': 7, 'math.calc.varlim.fund': 5, 'math.calc.int.def': 42, 'math.calc.int.parts': 4, 'math.calc.int.sub': 4, 'math.calc.int.special': 4, 'math.calc.app.area': 3, 'math.calc.app.volume': 3, 'math.calc.app.phys': 3}

| id | example_id | page | l2 | l3_id | difficulty | starred |
|---|---|---|---|---|---|---|
| tx-pu-math-contest-v2-ch3-3.2-ex-01 | 例1 | 147 | 变限积分与积分应用 | math.calc.varlim.eq | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-02 | 例2 | 148 | 变限积分与积分应用 | math.calc.varlim.eq | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-03 | 例3 | 148 | 变限积分与积分应用 | math.calc.varlim.eq | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-04 | 例4 | 149 | 变限积分与积分应用 | math.calc.varlim.fund | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-05 | 例5 | 149 | 变限积分与积分应用 | math.calc.varlim.eq | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-06 | 例6 | 150 | 变限积分与积分应用 | math.calc.varlim.fund | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-07 | 例7 | 150 | 变限积分与积分应用 | math.calc.varlim.fund | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-08 | 例8 | 150 | 变限积分与积分应用 | math.calc.varlim.eq | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-09 | 例9 | 151 | 变限积分与积分应用 | math.calc.varlim.fund | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-10 | 例10 | 152 | 变限积分与积分应用 | math.calc.varlim.eq | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-11 | 例11* | 152 | 变限积分与积分应用 | math.calc.varlim.fund | hit | * |
| tx-pu-math-contest-v2-ch3-3.2-ex-12 | 例12 | 153 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-13 | 例13 | 153 | 一元积分学（计算） | math.calc.int.parts | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-14 | 例14 | 154 | 一元积分学（计算） | math.calc.int.sub | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-15 | 例15 | 154 | 一元积分学（计算） | math.calc.int.sub | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-16 | 例16 | 155 | 一元积分学（计算） | math.calc.int.sub | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-17 | 例17 | 155 | 一元积分学（计算） | math.calc.int.special | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-18 | 例18 | 156 | 一元积分学（计算） | math.calc.int.parts | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-19 | 例19 | 157 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-20 | 例20 | 157 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-21 | 例21* | 158 | 一元积分学（计算） | math.calc.int.sub | hit | * |
| tx-pu-math-contest-v2-ch3-3.2-ex-22 | 例22 | 158 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-23 | 例23 | 159 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-24 | 例24 | 159 | 一元积分学（计算） | math.calc.int.special | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-25 | 例25 | 160 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-26 | 例26 | 160 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-27 | 例27 | 161 | 一元积分学（计算） | math.calc.int.parts | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-28 | 例28 | 161 | 一元积分学（计算） | math.calc.int.parts | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-29 | 例29* | 162 | 一元积分学（计算） | math.calc.int.special | hit | * |
| tx-pu-math-contest-v2-ch3-3.2-ex-30 | 例30* | 162 | 一元积分学（计算） | math.calc.int.special | hit | * |
| tx-pu-math-contest-v2-ch3-3.2-ex-31 | 例31 | 163 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-32 | 例32 | 164 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-33 | 例33 | 165 | 变限积分与积分应用 | math.calc.varlim.eq | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-34 | 例34 | 165 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-35 | 例35 | 166 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-36 | 例36 | 166 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-37 | 例37* | 167 | 一元积分学（计算） | math.calc.int.def | hit | * |
| tx-pu-math-contest-v2-ch3-3.2-ex-38 | 例38* | 168 | 一元积分学（计算） | math.calc.int.def | hit | * |
| tx-pu-math-contest-v2-ch3-3.2-ex-39 | 例39* | 169 | 一元积分学（计算） | math.calc.int.def | hit | * |
| tx-pu-math-contest-v2-ch3-3.2-ex-40 | 例40 | 169 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-41 | 例41 | 170 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-42 | 例42* | 171 | 一元积分学（计算） | math.calc.int.def | hit | * |
| tx-pu-math-contest-v2-ch3-3.2-ex-43 | 例43 | 171 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-44 | 例44* | 172 | 一元积分学（计算） | math.calc.int.def | hit | * |
| tx-pu-math-contest-v2-ch3-3.2-ex-45 | 例45* | 172 | 一元积分学（计算） | math.calc.int.def | hit | * |
| tx-pu-math-contest-v2-ch3-3.2-ex-46 | 例46 | 173 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-47 | 例47 | 174 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-48 | 例48 | 174 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-49 | 例49 | 175 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-50 | 例50 | 175 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-51 | 例51* | 175 | 一元积分学（计算） | math.calc.int.def | hit | * |
| tx-pu-math-contest-v2-ch3-3.2-ex-52 | 例52 | 176 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-53 | 例53 | 177 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-54 | 例54 | 178 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-55 | 例55 | 179 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-56 | 例56 | 180 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-57 | 例57 | 180 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-58 | 例58 | 181 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-59 | 例59 | 182 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-60 | 例60 | 183 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-61 | 例61 | 184 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-62 | 例62 | 184 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-63 | 例63 | 185 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-64 | 例64* | 186 | 一元积分学（计算） | math.calc.int.def | hit | * |
| tx-pu-math-contest-v2-ch3-3.2-ex-65 | 例65 | 187 | 一元积分学（计算） | math.calc.int.def | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-66 | 例66* | 188 | 一元积分学（计算） | math.calc.int.def | hit | * |
| tx-pu-math-contest-v2-ch3-3.2-ex-67 | 例67 | 189 | 变限积分与积分应用 | math.calc.app.area | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-68 | 例68 | 189 | 变限积分与积分应用 | math.calc.app.area | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-69 | 例69 | 190 | 变限积分与积分应用 | math.calc.app.volume | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-70 | 例70 | 190 | 变限积分与积分应用 | math.calc.app.area | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-71 | 例71* | 191 | 变限积分与积分应用 | math.calc.app.volume | hit | * |
| tx-pu-math-contest-v2-ch3-3.2-ex-72 | 例72* | 192 | 变限积分与积分应用 | math.calc.app.volume | hit | * |
| tx-pu-math-contest-v2-ch3-3.2-ex-73 | 例73 | 192 | 变限积分与积分应用 | math.calc.app.phys | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-74 | 例74 | 193 | 变限积分与积分应用 | math.calc.app.phys | hit |  |
| tx-pu-math-contest-v2-ch3-3.2-ex-75 | 例75* | 194 | 变限积分与积分应用 | math.calc.app.phys | hit | * |
